--- a/booking.html
+++ b/booking.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="index.html#services">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="game-library.html">Games</a>
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary ms-lg-3" href="booking.html" aria-current="page">Book now</a>
+                        <a class="btn custom-button-filled ms-lg-3" href="booking.html" aria-current="page">Book now</a>
                     </li>
                 </ul>
             </div>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn custom-button-outline">Submit</button>
                     </form>
                 </div>
             </div>
