--- a/game-library.html
+++ b/game-library.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="index.html#services">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="game-library.html">Games</a>
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary ms-lg-3" href="booking.html">Book now</a>
+                        <a class="btn custom-button-filled ms-lg-3" href="booking.html">Book now</a>
                     </li>
                 </ul>
             </div>
