Minor fizes for HTML and CSS validation

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <p class="student-discount mb-4 text-center">*Get 20% off with valid student ID</button>
+                    <p class="student-discount mb-4 text-center">*Get 20% off with valid student ID</p>
                 </div>
                 <a class="btn custom-button-outline mb-4 w-auto mx-auto d-block" href="booking.html">Book now</a>
             </div>
